applications/tiddlywiki5/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiddlywiki
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tiddlywiki
  template:
    metadata:
      labels:
        app: tiddlywiki
    spec:
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
      volumes:
      - name: tiddlywiki-nfs-share
        persistentVolumeClaim:
          claimName: tiddlywiki-data
      containers:
      - name: tiddlywiki
        image: atmosx/arm32v7-tiddlywikiv5.1.13:6
        volumeMounts:
        - name: tiddlywiki-nfs-share
          mountPath: "/data"
