applications/tiddlywiki5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiddlywiki
  namespace: applications
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: tiddlywiki
